
Thu Jun 25 16:26:27 EDT 1998
(Raster)

added dox to cvs - guess what.. it actually works.. :)

-----------------------------------------------------------------

Sun Aug 23 22:13:16 EDT 1998
(Mandrake)

fixed imlib-config stuff

-----------------------------------------------------------------

Sun Sep  6 18:54:17 EDT 1998
(Mandrake)

incremented minor rev to 15.

-----------------------------------------------------------------

Fri Sep 11 11:29:57 EDT 1998
(Mandrake)

added -I$prefix/include to CPPFLAGS in configure.in

-----------------------------------------------------------------

Aug 14/1998 (Hilarion, woo hoo!)

o Added in support for keybindings (PgUp/PgDn/Return/Home/End)
o Can now select buttons with keys
o Previous button/PageUp can now return from a button press 
  to the original page

-----------------------------------------------------------------

Tue Sep 29 18:11:10 PDT 1998
(Yosh)

Redid the Makefiles to be less kludgy

-----------------------------------------------------------------

Sat Jul 10 16:45:42 PDT 1999
(Mandrake)

added patch from Christian Kreibich <kreibich@informatik.tu-muenchen.de>
to stop the memory leak in dox

-----------------------------------------------------------------

Sun Dec 26 22:54:57 PST 1999
(Mandrake)

Added patch from Yukihiro Nakai <nakai@internetsolutions.co.jp>
to add setlocale to dox.c
-----------------------------------------------------------------

Tue Mar 14 20:23:53 CET 2000
(Saur)

Added patch from Masahiko Mori <masa@cthulhu.engr.sgi.com>
to improve localization support (I modified the patch somewhat).

-----------------------------------------------------------------

Thu Mar 30 17:15:19 PST 2000
(Mandrake)

Makes dox recognize xinerama to pop up centered on the current head.