@@ -55,7 +55,7 @@ AC_PATH_XTRA
 
 AC_CHECK_HEADER(stdarg.h, AC_DEFINE(HAVE_STDARGS))
 AC_CHECK_HEADER(X11/SM/SMlib.h, AC_DEFINE(HAVE_SM))
-AC_CHECK_HEADERS(alloca.h)
+AC_CHECK_HEADERS(alloca.h wctype.h)
 
 AC_TYPE_SIGNAL
 
